--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "framer-motion": "^12.4.3",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
     "react-colorful": "^5.6.1",
-    "webfontloader": "^1.6.28",
-    "lucide-react": "^0.344.0"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
     "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
+    "@types/react-dom": "^18.3.5",
     "@types/webfontloader": "^1.6.38",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
