--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/auth": "^1.9.0",
     "@tinymce/tinymce-react": "^5.1.1",
+    "firebase": "^11.3.1",
     "framer-motion": "^12.4.3",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
@@ -27,12 +29,12 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.3.5",
     "@types/webfontloader": "^1.6.38",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^0.10.3"
   }
 }
